--- a/simpleHtml/index.html
+++ b/simpleHtml/index.html
@@ -5,7 +5,6 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
-    <link href="mycss.css" rel="stylesheet" >
     <link href="http://fonts.cdnfonts.com/css/roboto" rel="stylesheet">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/web3/1.7.5/web3.min.js" integrity="sha512-/T7YwzOsNeoNkuTfYKXn3CrJCGc5cnC8T4QW46Hy+3Xjdjrxzokmbx8M8Xavjq1K7dN4958kIRGy4J03VRIlSg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <style>
@@ -24,7 +23,7 @@
       <header class="mb-auto"></header>
     
       <main class="px-3">
-        <h1 id="status" >Connecting to contract...</h1>
+        <h1 id="status" >Connecting to Ethereum blockchain...</h1>
       </main>
     
       <footer class="mt-auto"></footer>
